[project]
name = "ap-easypower-energieid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.21.0",
    "apsystems-ez1>=2.7.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
]
[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "flake8>=7.0.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
[project.scripts]
energieid-monitor = "energieid_monitor.__main__:main"
[tool.setuptools]
# Use find to auto-discover packages in src/ directory and exclude dbscripts
# This works both in source directory (src-layout) and install directory (flat layout)
packages = { find = { where = ["src"], exclude = ["dbscripts*"] } }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
